@@ -6,6 +6,8 @@ CHANGELOG
 	Jul 1, 2009
 
 	* extra/tablature.py: Raise the proper exceptions (closes issue #65).
+	* extra/tunings.py: Raising proper exceptions. Added unit tests 
+	(closes issue #52).
 
 ================================================================================
 
